added password to userAccount

--- a/app/src/main/res/layout/content_create_account.xml
+++ b/app/src/main/res/layout/content_create_account.xml
@@ -92,6 +92,19 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="password"
+                android:textSize="36dp" />
+
+            <EditText
+                android:id="@+id/User_Password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="password"
+                android:inputType="text" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:text="Phone Number"
                 android:textSize="36dp" />
 
